unpackaged/main/default/objects/WorkOrder/fields/Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Override_Reason__c</fullName>
    <formula>Case.Override_Reason__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Override Reason</label>
    <type>Text</type>
</CustomField>