unpackaged/main/default/objects/WorkOrder/fields/Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Date__c</fullName>
    <description>Field used for loading historic ERS call data. Not for use in new functionality.</description>
    <label>Paid Date</label>
    <type>Date</type>
</CustomField>