unpackaged/main/default/objects/WorkOrder/fields/Parent_Territory__c.field-meta.xml
<CustomField>
    <fullName>Parent_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Territory</label>
    <referenceTo>ServiceTerritory</referenceTo>
    <relationshipLabel>Parent Territory Work Orders</relationshipLabel>
    <relationshipName>Territory_Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>