unpackaged/main/default/objects/WorkOrder/fields/Parsed_Created_Time__c.field-meta.xml
<CustomField>
    <fullName>Parsed_Created_Time__c</fullName>
    <label>Parsed Created Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>