unpackaged/main/default/objects/WorkOrder/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <label>Payment Amount($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>