unpackaged/main/default/objects/WorkOrder/fields/Payment_Codes__c.field-meta.xml
<CustomField>
    <fullName>Payment_Codes__c</fullName>
    <label>Payment Codes</label>
    <length>30</length>
    <type>Text</type>
</CustomField>