unpackaged/main/default/objects/WorkOrder/fields/Payment_Required_Flag__c.field-meta.xml
<CustomField>
    <fullName>Payment_Required_Flag__c</fullName>
    <formula>IF(Payment_Required__c = true, 
IMAGE(LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260)) &amp; &quot;resource/FSLCODDollarBill&quot;, &quot;COD&quot;), 
IMAGE(&quot;/s.gif&quot;, &quot;No Payment Required&quot;))</formula>
    <label>Payment Required Flag</label>
    <type>Text</type>
</CustomField>