unpackaged/main/default/objects/WorkOrder/fields/Payment_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Payment_Responsibility__c</fullName>
    <label>Payment Responsibility</label>
    <length>50</length>
    <type>Text</type>
</CustomField>