unpackaged/main/default/objects/WorkOrder/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>