unpackaged/main/default/objects/WorkOrder/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <formula>IF(  !ISBLANK(WO_Member_Phone_Number__c), 

IF(LEN(WO_Member_Phone_Number__c) = 10,&quot;(&quot; &amp; LEFT(WO_Member_Phone_Number__c, 3) &amp; &quot;) &quot; &amp; LEFT(RIGHT(WO_Member_Phone_Number__c, 7), 3) &amp; &quot;-&quot; &amp; RIGHT(WO_Member_Phone_Number__c, 4),WO_Member_Phone_Number__c),

IF(LEN(Contact.Phone) = 10,&quot;(&quot; &amp; LEFT(Contact.Phone, 3) &amp; &quot;) &quot; &amp; LEFT(RIGHT(Contact.Phone, 7), 3) &amp; &quot;-&quot; &amp; RIGHT(Contact.Phone, 4),Contact.Phone)
)</formula>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>