unpackaged/main/default/objects/WorkOrder/fields/PnA_Review_Required__c.field-meta.xml
<CustomField>
    <fullName>PnA_Review_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PnA Review Required</label>
    <type>Checkbox</type>
</CustomField>