unpackaged/main/default/objects/WorkOrder/fields/Policy_Code__c.field-meta.xml
<CustomField>
    <fullName>Policy_Code__c</fullName>
    <description>FSL Policy Code</description>
    <label>Policy Code</label>
    <length>13</length>
    <type>Text</type>
</CustomField>