unpackaged/main/default/objects/WorkOrder/fields/Priority_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Priority_Explanation__c</fullName>
    <formula>TEXT(Case.Critical_Call_Reason__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Explanation</label>
    <type>Text</type>
</CustomField>