unpackaged/main/default/objects/WorkOrder/fields/Program_Description__c.field-meta.xml
<CustomField>
    <fullName>Program_Description__c</fullName>
    <formula>Contact.Membership_OrgCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Club Code</label>
    <type>Text</type>
</CustomField>