unpackaged/main/default/objects/WorkOrder/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <formula>Contact.Membership_Org__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Club Name</label>
    <type>Text</type>
</CustomField>