unpackaged/main/default/objects/WorkOrder/fields/RAP_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>RAP_Case_Number__c</fullName>
    <label>RAP Case Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>