unpackaged/main/default/objects/WorkOrder/fields/RAP_Ready__c.field-meta.xml
<CustomField>
    <fullName>RAP_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(DEPRECATE) RAP Ready</label>
    <type>Checkbox</type>
</CustomField>