unpackaged/main/default/objects/WorkOrder/fields/RAP_Status__c.field-meta.xml
<CustomField>
    <fullName>RAP_Status__c</fullName>
    <label>RAP Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PnA Review Required</fullName>
            </value>
            <value>
                <fullName>RAP Cleared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>