unpackaged/main/default/objects/WorkOrder/fields/RAP_Verified__c.field-meta.xml
<CustomField>
    <fullName>RAP_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, the technician has already verified the RAP requirements in the RAP subflow</description>
    <inlineHelpText>If checked, the technician has already verified the RAP requirements in the RAP subflow</inlineHelpText>
    <label>RAP Verified</label>
    <type>Checkbox</type>
</CustomField>