unpackaged/main/default/objects/WorkOrder/fields/Recalculate_Price__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate Price</label>
    <type>Checkbox</type>
</CustomField>