unpackaged/main/default/objects/WorkOrder/fields/Recalculate_TW_OM__c.field-meta.xml
<CustomField>
    <fullName>Recalculate_TW_OM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recalculate TW OM</label>
    <type>Checkbox</type>
</CustomField>