unpackaged/main/default/objects/WorkOrder/fields/Received_To_Clear_Time__c.field-meta.xml
<CustomField>
    <fullName>Received_To_Clear_Time__c</fullName>
    <description>This field calculates the time in minutes it took to for the status of WO to move from Spotted (created timestamp) to Cleared</description>
    <formula>if ( Cleared_Timestamp__c  &gt; Spotted_Timestamp__c , ( Cleared_Timestamp__c  - Spotted_Timestamp__c)*1440,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received To Clear Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>