unpackaged/main/default/objects/WorkOrder/fields/Reciprocal__c.field-meta.xml
<CustomField>
    <fullName>Reciprocal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reciprocal</label>
    <referenceTo>Reciprocal__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>