unpackaged/main/default/objects/WorkOrder/fields/Reconcile_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Reconcile_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this WO will be moved under new SC after it gets into Salesforce</description>
    <label>Reconcile Entitlement</label>
    <type>Checkbox</type>
</CustomField>