unpackaged/main/default/objects/WorkOrder/fields/Record_Type_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Dev_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <label>Record Type Dev Name</label>
    <type>Text</type>
</CustomField>