unpackaged/main/default/objects/WorkOrder/fields/Repair_Shop__c.field-meta.xml
<CustomField>
    <fullName>Repair_Shop__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repair Shop</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Work Orders (Repair Shop)</relationshipLabel>
    <relationshipName>Work_Orders4</relationshipName>
    <type>Lookup</type>
</CustomField>