unpackaged/main/default/objects/WorkOrder/fields/Requested_Destination_Unavailable__c.field-meta.xml
<CustomField>
    <fullName>Requested_Destination_Unavailable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requested Destination Unavailable</label>
    <type>Checkbox</type>
</CustomField>