unpackaged/main/default/objects/WorkOrder/fields/Resolution_Code__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Code__c</fullName>
    <label>Resolution Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CAR_ConsolidatedResoCodes</valueSetName>
    </valueSet>
</CustomField>