unpackaged/main/default/objects/WorkOrder/fields/Responder_Id__c.field-meta.xml
<CustomField>
    <fullName>Responder_Id__c</fullName>
    <label>Original Receiver Id</label>
    <length>9</length>
    <type>Text</type>
</CustomField>