unpackaged/main/default/objects/WorkOrder/fields/Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Response_Time__c</fullName>
    <formula>if (On_Location_Timestamp__c &gt;  Spotted_Timestamp__c , (On_Location_Timestamp__c - Spotted_Timestamp__c)*1440,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Response Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>