unpackaged/main/default/objects/WorkOrder/fields/Schedule_Duration__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Duration__c</fullName>
    <formula>If(Dispatched_Timestamp__c &gt; Scheduled_Timestamp__c,(Dispatched_Timestamp__c -Scheduled_Timestamp__c)*1440,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Schedule Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>