unpackaged/main/default/objects/WorkOrder/fields/Schedule_Freeze__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Freeze__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Schedule Freeze</label>
    <referenceTo>Schedule_Freeze__c</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>