unpackaged/main/default/objects/WorkOrder/fields/Scheduling_Policy__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Policy__c</fullName>
    <label>Scheduling Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>