unpackaged/main/default/objects/WorkOrder/fields/Sent_to_BackOffice__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_BackOffice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to BackOffice</label>
    <type>Checkbox</type>
</CustomField>