unpackaged/main/default/objects/WorkOrder/fields/Service_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_Number__c</fullName>
    <formula>IF( ISBLANK( Call_Id__c ) ,  &#39;0&#39; + RIGHT( WorkOrderNumber , 5) , Call_Id__c )</formula>
    <label>Service Order Number</label>
    <type>Text</type>
</CustomField>