unpackaged/main/default/objects/WorkOrder/fields/Service_Territory_Group__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory_Group__c</fullName>
    <formula>text(ServiceTerritory.Group__c)</formula>
    <label>Service Territory Group</label>
    <type>Text</type>
</CustomField>