unpackaged/main/default/objects/WorkOrder/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Service Type</label>
    <type>Text</type>
</CustomField>