unpackaged/main/default/objects/WorkOrder/fields/Service_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Service_Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Vehicle</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>