unpackaged/main/default/objects/WorkOrder/fields/Serviced_By_Nona__c.field-meta.xml
<CustomField>
    <fullName>Serviced_By_Nona__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Serviced By NONA</label>
    <type>Checkbox</type>
</CustomField>