unpackaged/main/default/objects/WorkOrder/fields/Servicing_Technology_Type__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Technology_Type__c</fullName>
    <defaultValue>&quot;Full FSL Technology&quot;</defaultValue>
    <description>Indicates the type of technology that the servicing facility is using (i.e. Full FSL Technology, SMS, or Landline)</description>
    <inlineHelpText>Indicates the type of technology that the servicing facility is using (i.e. Full FSL Technology, SMS, or Landline)</inlineHelpText>
    <label>Servicing Technology Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>