unpackaged/main/default/objects/WorkOrder/fields/SLI_Quantity__c.field-meta.xml
<CustomField>
    <fullName>SLI_Quantity__c</fullName>
    <label>SLI Quantity</label>
    <summarizedField>FSL_Service_Line_Item__c.Unit__c</summarizedField>
    <summaryForeignKey>FSL_Service_Line_Item__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>