unpackaged/main/default/objects/WorkOrder/fields/SLI_Requested_Cost__c.field-meta.xml
<CustomField>
    <fullName>SLI_Requested_Cost__c</fullName>
    <label>SLI Requested Cost</label>
    <summarizedField>FSL_Service_Line_Item__c.Requested_Cost__c</summarizedField>
    <summaryForeignKey>FSL_Service_Line_Item__c.Work_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>