unpackaged/main/default/objects/WorkOrder/fields/SLR_Tow_Miles_c__c.field-meta.xml
<CustomField>
    <fullName>SLR_Tow_Miles_c__c</fullName>
    <description>The number of miles traveled to tow member vehicle to the destination. Entered in APD window of DI module.</description>
    <label>SLR_Tow_Miles__c</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>