unpackaged/main/default/objects/WorkOrder/fields/SMS_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_In__c</fullName>
    <description>DO NOT USE</description>
    <formula>Contact.Sms_Optin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SMS Opt-In</label>
    <type>Checkbox</type>
</CustomField>