unpackaged/main/default/objects/WorkOrder/fields/SMS_OptIn__c.field-meta.xml
<CustomField>
    <fullName>SMS_OptIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Opt In</label>
    <type>Checkbox</type>
</CustomField>