unpackaged/main/default/objects/WorkOrder/fields/Spotted_Duration__c.field-meta.xml
<CustomField>
    <fullName>Spotted_Duration__c</fullName>
    <formula>If(Scheduled_Timestamp__c &gt;  Spotted_Timestamp__c, (Scheduled_Timestamp__c - Spotted_Timestamp__c)*1440,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spotted Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>