unpackaged/main/default/objects/WorkOrder/fields/Spotted_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Spotted_Timestamp__c</fullName>
    <description>Captures the timestamp when the WorkOrder enters the spotted</description>
    <label>Spotted Timestamp</label>
    <type>DateTime</type>
</CustomField>