unpackaged/main/default/objects/WorkOrder/fields/Supervisor_Override_Call__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Override_Call__c</fullName>
    <formula>Case.Impairment_Supervisor_Override__c</formula>
    <label>Supervisor Override Call</label>
    <type>Checkbox</type>
</CustomField>