unpackaged/main/default/objects/WorkOrder/fields/Task_Completion_Duration__c.field-meta.xml
<CustomField>
    <fullName>Task_Completion_Duration__c</fullName>
    <formula>(Cleared_Timestamp__c - Scheduled_Timestamp__c)*1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task Completion Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>