unpackaged/main/default/objects/WorkOrder/fields/Technician_Name__c.field-meta.xml
<CustomField>
    <fullName>Technician_Name__c</fullName>
    <label>Technician Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>