unpackaged/main/default/objects/WorkOrder/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <description>Historic data field for D3 calls. Not for new functionality.</description>
    <label>Ticket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>