unpackaged/main/default/objects/WorkOrder/fields/Time_of_Call__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Call__c</fullName>
    <description>Denotes the hour in which the call was created, accounting for the current timezone.</description>
    <formula>IF( 
Timezone_Id__c = &#39;America/Chicago&#39;,
VALUE(MID(TEXT(CreatedDate - 5/24), 12, 2) ),
IF(
Timezone_Id__c = &#39;America/New_York&#39;,
VALUE(MID(TEXT(CreatedDate - 4/24), 12, 2) ),
IF(
Timezone_Id__c = &#39;America/Los_Angeles&#39;,
VALUE(MID(TEXT(CreatedDate - 7/24), 12, 2) ),
VALUE(MID(TEXT(CreatedDate), 12, 2) )
)))</formula>
    <label>Time of Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>