unpackaged/main/default/objects/WorkOrder/fields/Timezone_Id__c.field-meta.xml
<CustomField>
    <fullName>Timezone_Id__c</fullName>
    <label>D3 Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>