unpackaged/main/default/objects/WorkOrder/fields/Timezone_Offset__c.field-meta.xml
<CustomField>
    <fullName>Timezone_Offset__c</fullName>
    <label>D3 Timezone Offset</label>
    <length>9</length>
    <type>Text</type>
</CustomField>