unpackaged/main/default/objects/WorkOrder/fields/Total_Adjustment_Dollars__c.field-meta.xml
<CustomField>
    <fullName>Total_Adjustment_Dollars__c</fullName>
    <description>Field used for loading historic ERS call data. Not for use in new functionality.</description>
    <label>Total Adjustment Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>