unpackaged/main/default/objects/WorkOrder/fields/Total_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Total_Mileage__c</fullName>
    <label>Total Mileage</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>