unpackaged/main/default/objects/WorkOrder/fields/Tow_Address__c.field-meta.xml
<CustomField>
    <fullName>Tow_Address__c</fullName>
    <formula>IF(NOT(IsBlank(Tow_Street__c)),Tow_Street__c &amp; &#39;, &#39;, &#39;&#39;) &amp; IF(NOT(IsBlank(Tow_City__c)),Tow_City__c &amp; &#39;, &#39;,&#39;&#39;) &amp; IF(NOT(IsBlank(Tow_State__c)),Tow_State__c &amp; &#39; &#39;,&#39;&#39;) &amp; IF(NOT(IsBlank(Tow_Postal_Code__c)), Tow_Postal_Code__c,&#39;&#39;)</formula>
    <label>Tow Address</label>
    <type>Text</type>
</CustomField>