unpackaged/main/default/objects/WorkOrder/fields/Tow_City__c.field-meta.xml
<CustomField>
    <fullName>Tow_City__c</fullName>
    <description>City of the tow location</description>
    <label>Tow City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>