unpackaged/main/default/objects/WorkOrder/fields/Tow_Complete_Duration__c.field-meta.xml
<CustomField>
    <fullName>Tow_Complete_Duration__c</fullName>
    <formula>If( Cleared_Timestamp__c &gt; Tow_Complete_Timestamp__c,(Cleared_Timestamp__c -Tow_Complete_Timestamp__c)*1440,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tow Complete Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>