unpackaged/main/default/objects/WorkOrder/fields/Tow_Complete_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Tow_Complete_Timestamp__c</fullName>
    <label>Tow Complete Timestamp</label>
    <type>DateTime</type>
</CustomField>