unpackaged/main/default/objects/WorkOrder/fields/Tow_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Tow_Contact_First_Name__c</fullName>
    <label>Tow Contact First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>