unpackaged/main/default/objects/WorkOrder/fields/Tow_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Tow_Contact_Phone_Number__c</fullName>
    <label>Tow Contact Phone Number</label>
    <type>Phone</type>
</CustomField>