unpackaged/main/default/objects/WorkOrder/fields/Tow_Country__c.field-meta.xml
<CustomField>
    <fullName>Tow_Country__c</fullName>
    <description>Country of the tow location</description>
    <label>Tow Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>