unpackaged/main/default/objects/WorkOrder/fields/Tow_Cross_Street_2__c.field-meta.xml
<CustomField>
    <fullName>Tow_Cross_Street_2__c</fullName>
    <label>Tow Cross Street 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>