unpackaged/main/default/objects/WorkOrder/fields/Tow_Cross_Street__c.field-meta.xml
<CustomField>
    <fullName>Tow_Cross_Street__c</fullName>
    <label>Tow Cross Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>