unpackaged/main/default/objects/WorkOrder/fields/Tow_Cross_Streets__c.field-meta.xml
<CustomField>
    <fullName>Tow_Cross_Streets__c</fullName>
    <formula>IF(Tow_Cross_Street_2__c != null &amp;&amp; Tow_Cross_Street__c != null , Tow_Cross_Street__c + &#39; &amp; &#39; + Tow_Cross_Street_2__c, IF(ISBLANK(Tow_Cross_Street__c) ||  ISBLANK(Tow_Cross_Street_2__c), Tow_Cross_Street__c + &#39;&#39;+Tow_Cross_Street_2__c,&#39;&#39;))</formula>
    <label>Tow Cross Streets</label>
    <type>Text</type>
</CustomField>