unpackaged/main/default/objects/WorkOrder/fields/Tow_Destination_Name__c.field-meta.xml
<CustomField>
    <fullName>Tow_Destination_Name__c</fullName>
    <label>Tow Destination Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>