unpackaged/main/default/objects/WorkOrder/fields/Tow_Landmark__c.field-meta.xml
<CustomField>
    <fullName>Tow_Landmark__c</fullName>
    <label>Tow Landmark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>