unpackaged/main/default/objects/WorkOrder/fields/Tow_Location__c.field-meta.xml
<CustomField>
    <fullName>Tow_Location__c</fullName>
    <label>Tow Location</label>
    <scale>5</scale>
    <type>Location</type>
</CustomField>