unpackaged/main/default/objects/WorkOrder/fields/Tow_Longitude__c.field-meta.xml
<CustomField>
    <fullName>Tow_Longitude__c</fullName>
    <label>Tow Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>