unpackaged/main/default/objects/WorkOrder/fields/Tow_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Tow_Postal_Code__c</fullName>
    <description>Postal Code of the tow location</description>
    <label>Tow Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>