unpackaged/main/default/objects/WorkOrder/fields/Tow_Request_Miscellaneous_Details__c.field-meta.xml
<CustomField>
    <fullName>Tow_Request_Miscellaneous_Details__c</fullName>
    <label>Tow Request Miscellaneous Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>