unpackaged/main/default/objects/WorkOrder/fields/Tow_State__c.field-meta.xml
<CustomField>
    <fullName>Tow_State__c</fullName>
    <description>State of the tow location</description>
    <label>Tow State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>