unpackaged/main/default/objects/WorkOrder/fields/Tow_Street__c.field-meta.xml
<CustomField>
    <fullName>Tow_Street__c</fullName>
    <description>Street address for the tow location</description>
    <label>Tow Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>