unpackaged/main/default/objects/WorkOrder/fields/Use_Battery_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Use_Battery_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Battery Entitlement</label>
    <type>Checkbox</type>
</CustomField>