unpackaged/main/default/objects/WorkOrder/fields/Use_Home_Lock_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Use_Home_Lock_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Home Lock Entitlement</label>
    <type>Checkbox</type>
</CustomField>